After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 694271 - order of nautilus_application_startup() is wrong
order of nautilus_application_startup() is wrong
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: Desktop
unspecified
Other All
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-02-20 14:29 UTC by Allison Karlitskaya (desrt)
Modified: 2013-02-20 16:16 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
NautilusApplication: change startup() order (998 bytes, patch)
2013-02-20 14:32 UTC, Allison Karlitskaya (desrt)
committed Details | Review

Description Allison Karlitskaya (desrt) 2013-02-20 14:29:37 UTC
It does init_desktop() before setting up the menus.

The result is that you get slightly weird behaviour.  If the desktop is set to be drawn on startup then the desktop window is created before the menu is set and then the GTK_APP_MENU_OBJECT_PATH property is not set.

If you create a normal nautilus window first and then go into the tweak-tool and enable the desktop then the desktop window ends up with the property set.

Correct fix is to move init_desktop() to under nautilus_application_init_actions().

I'm not even sure why Gtk is letting this happen without complaining...
Comment 1 Allison Karlitskaya (desrt) 2013-02-20 14:32:01 UTC
Created attachment 236933 [details] [review]
NautilusApplication: change startup() order

Move init_desktop() under nautilus_application_init_actions() so that we
have the appmenu setup by the time we create the desktop window (so that
the property is set properly).
Comment 2 Cosimo Cecchi 2013-02-20 14:49:21 UTC
Review of attachment 236933 [details] [review]:

Looks good, thanks.
Comment 3 Allison Karlitskaya (desrt) 2013-02-20 16:16:14 UTC
Attachment 236933 [details] pushed as ccb3881 - NautilusApplication: change startup() order