NautilusApplication: change startup() order

Move init_desktop() under nautilus_application_init_actions() so that we
have the appmenu setup by the time we create the desktop window (so that
the property is set properly).

https://bugzilla.gnome.org/show_bug.cgi?id=694271